k8s-test-proj-master/nginx-pod-k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
  namespace: default
  labels:
    app: web
spec:
  containers:
    - name: nginx-server
      image: "dev1johndoe/nginx:2.0"
      ports:
          - containerPort: 80
