k8s-test-proj-master/nginx-deployment-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nginx-deployment
  namespace: default
  labels:
    app:  web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app:  web
    spec:
      containers:
      - name: nginx-server
        image: "dev1johndoe/nginx:2.0"
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: web
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    nodePort: 32222
  selector:
    app: web
