k8s-test-proj-master/nginx-pod-network-k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-srv
  namespace: default
  labels:
    app: web
spec:
  containers:
    - name: nginx-server
      image: "dev1johndoe/nginx:2.0"
      ports:
       - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: web
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    nodePort: 32222
  selector:
    app: web
