k8s-test-proj-master/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  rules:
  - host: k8s.local
    http:
      paths:
      - backend:
          serviceName: nginx-svc
          servicePort: 80
